--- a/index.html
+++ b/index.html
@@ -6,15 +6,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="source/css/bootstrap.min.css">
+
+    <!-- Custom CSS-->
+    <link rel="stylesheet" href="css/global.css">
 
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header>
+
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1" disabled></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2" disabled></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3" disabled></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active" style="background-image: url('assets/images/carousel/cover_1.jpg')">
+              <div class="carousel-caption">
+                <h1>Rhaiters Computer</h1>
+                <p>Some representative placeholder content for the first slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item" style="background-image: url('assets/images/carousel/cover_2.jpg')">
+              <div class="carousel-caption">
+                <h5>Second slide label</h5>
+                <p>Some representative placeholder content for the second slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item" style="background-image: url('assets/images/carousel/cover_3.jpg')">
+              <div class="carousel-caption">
+                <h5>Third slide label</h5>
+                <p>Some representative placeholder content for the third slide.</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </header>
+      
+      <!-- Page Content -->
+      <section class="py-5">
+        <div class="container">
+          <h1 class="fw-light">Full Page Image Slider</h1>
+          <p class="lead">The background images for the slider are set directly in the HTML using inline CSS. The images
+            in this snippet are from <a href="https://unsplash.com">Unsplash</a>, taken by <a href="https://unsplash.com/@joannakosinska">Joanna Kosinska</a>!</p>
+        </div>
+      </section>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="dist/js/jquery-3.6.0.min.js"></script>
-    <script src="dist/js/bootstrap.bundle.min.js"></script>
+    <script src="source/js/jquery-3.6.0.min.js"></script>
+    <script src="source/js/bootstrap.bundle.min.js"></script>
+    <script src="js/Main.js"></script>
   </body>
 </html>
