Making the header

--- a/index.html
+++ b/index.html
@@ -6,15 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="source/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/global.css">
 
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <nav class="navbar navbar-dark fixed-top" style="background-color: rgba(1, 1, 1, 0.8)">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="assets/images/logo_white.png" width="200" height="60" alt="">
+            </a>
+        </div>
+    </nav>
+    <header class="header-cover">
+        <div class="container h-100">
+            <div class="row h-100 d-flex align-items-center">
+                <div class="col-12 text-white">
+                    <h1>Soluções ágeis</h1>
+                    <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta illum quos laudantium ad, reprehenderit debitis optio beatae quam delectus eaque qui animi dicta amet placeat ipsum voluptatibus tenetur! Commodi, explicabo!</h5>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="container">
+            <div class="row">
+                <h2>Belong content</h2>
+            </div>
+        </div>
+    </main>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="dist/js/jquery-3.6.0.min.js"></script>
-    <script src="dist/js/bootstrap.bundle.min.js"></script>
+    <script src="source/js/jquery-3.6.0.min.js"></script>
+    <script src="source/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
