--- a/index.html
+++ b/index.html
@@ -19,13 +19,18 @@
             </a>
         </div>
     </nav>
-    <header class="header-cover">
-        <div class="container h-100">
-            <div class="row h-100 d-flex align-items-center">
-                <div class="col-12 text-white">
-                    <h1>Soluções ágeis</h1>
-                    <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta illum quos laudantium ad, reprehenderit debitis optio beatae quam delectus eaque qui animi dicta amet placeat ipsum voluptatibus tenetur! Commodi, explicabo!</h5>
+    <header>
+        <div class="banner d-flex flex-column align-items-center justify-content-center" id="banner">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 text-white bg-info">
+                        <h1 class="display-3 mb-3"><strong>Especialistas em tecnologia</strong></h1>
+                        <h4>Disponibilizando para sua empresa especialistas prontamente aptos e entregar soluções de alta qualidade</h4>
+                    </div>
                 </div>
+            </div>
+            <div class="bottom-icon bg-info">
+                Teste
             </div>
         </div>
     </header>
