--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <nav class="navbar navbar-dark fixed-top" style="background-color: rgba(1, 1, 1, 0.8)">
+    <nav class="navbar navbar-dark fixed-top" style="background-color: rgba(1, 1, 1, 0.1)">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="assets/images/logo_white.png" width="200" height="60" alt="">
@@ -21,16 +21,16 @@
     </nav>
     <header>
         <div class="banner d-flex flex-column align-items-center justify-content-center" id="banner">
-            <div class="container">
+            <div class="container mt-auto">
                 <div class="row">
-                    <div class="col-12 text-white bg-info">
+                    <div class="col-12 text-white">
                         <h1 class="display-3 mb-3"><strong>Especialistas em tecnologia</strong></h1>
-                        <h4>Disponibilizando para sua empresa especialistas prontamente aptos e entregar soluções de alta qualidade</h4>
+                        <h4>Disponibilizando para sua empresa especialistas prontamente aptos a entregar soluções de alta qualidade</h4>
                     </div>
                 </div>
             </div>
-            <div class="bottom-icon bg-info">
-                Teste
+            <div class="mt-auto mb-5 pb-3">
+                <div class="mouse-icon"><div class="wheel"></div></div>
             </div>
         </div>
     </header>
@@ -45,5 +45,6 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="source/js/jquery-3.6.0.min.js"></script>
     <script src="source/js/bootstrap.bundle.min.js"></script>
+    <script src="js/Main.js"></script>
   </body>
 </html>
