--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
     <!-- Icons CSS-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" 
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" 
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    
+    <link rel="stylesheet" href="source/css/owl.carousel.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
     <!-- Custom CSS-->
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/mouse-animate-icon.css">
-    <link rel="stylesheet" href="css/pulse-button.css">
+    <link rel="stylesheet" href="css/global.css"/>
+    <link rel="stylesheet" href="css/mouse-animate-icon.css"/>
+    <link rel="stylesheet" href="css/pulse-button.css"/>
 
     <title>Rhaiters Computer</title>
 </head>
@@ -134,11 +137,23 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="owl-carousel owl-theme">
+            <div> Your Content </div>
+            <div> Your Content </div>
+            <div> Your Content </div>
+            <div> Your Content </div>
+            <div> Your Content </div>
+            <div> Your Content </div>
+            <div> Your Content </div>
+          </div>
+    </section>
 
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="source/js/jquery-3.6.0.min.js"></script>
     <script src="source/js/bootstrap.bundle.min.js"></script>
+    <script src="source/js/owl.carousel.min.js"></script>
     <script src="js/Main.js"></script>
 </body>
 
