--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
             <a class="navbar-brand" href="#">
                 <img src="assets/images/icon_logo.png" width="32" height="32" alt="">
                 <img src="assets/images/company_name.png" width="150" height="32" alt="">
+                <a class="btn btn-primary btn-sm pulse ml-0" href="#"><i class="fas fa-shopping-cart"></i> Loja Virtual</a>
             </a>
-            <a class="btn btn-primary btn-sm pulse" href="#"><i class="fas fa-shopping-cart"></i> Loja Virtual</a>
-            <button id="navbarToggle" class="navbar-toggler btn-sm ml-2" type="button" data-bs-toggle="collapse"
+            <button id="navbarToggle" class="navbar-toggler text-white" type="button" data-bs-toggle="collapse"
                 data-bs-target="#menuNavbar" aria-controls="menuNavbar" aria-expanded="false"
                 aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon">   
+                    <i class="fas fa-bars" style="color:#fff; font-size:28px;"></i>
+                </span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="menuNavbar">
                 <span></span>
