--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         </div>
     </section>
 
-    <footer id="rodape" class="rodape bg-dark py-5">
+    <footer id="rodape" class="rodape bg-dark pt-5">
         <div class="container text-light">
             <div class="row">
                 <div class="col-md-4 text-center mb-4">
@@ -226,7 +226,8 @@
                 <div class="col-md-3 offset-md-3 text-center mb-4">
                     <h3><em>Contato</em></h3>
                     <p><i class="fas fa-phone-volume" style="font-size: 20px;"></i> (51) 3019-5204 | (51) 3013-0045<br>(51) 99359-9834 <i class="fab fa-whatsapp"></i></p>
-                    <p><i class="fas fa-envelope" style="font-size: 20px;"></i> atendimento@rhaiters.com.br</p>
+                    <p><i class="fas fa-envelope" style="font-size: 20px;"></i> 
+                        <a href="mailto:webmaster@example.com">atendimento@rhaiters.com.br</a></p>
                     <p><i class="fab fa-skype" style="font-size: 20px;"></i> @rhaiters</p>
                     <p><i class="fas fa-map-marker-alt" style="font-size: 20px;"></i> Av. São Pedro, 1348 - São Geraldo<br>Porto Alegre - RS</p>
                 </div>
@@ -241,6 +242,10 @@
 
                 </div>
             </div>
+            
+        </div>
+        <div class="container-fluid text-center" style="background-color: #111;">
+            <p style="color: #aaa;">Created by <a href="https://github.com/rodrigoadsilva" target="_blank">Rodrigo da Silva</a> | © 2021 All rights reserved</p>
         </div>
     </footer>
 
